@@ -2,13 +2,9 @@
 
 set -euo pipefail
 
-rm src/com/github/ivarref/GetSockOpt.class 2> /dev/null || true
-rm src/com/github/ivarref/GetSockOpt*.class 2> /dev/null || true
+rm -fv src/com/github/ivarref/*.class 2> /dev/null || true
 
-$HOME/.sdkman/candidates/java/20.ea.34-open/bin/javac \
---release 20 \
---enable-preview \
-src/com/github/ivarref/GetSockOpt.java
+javac src/com/github/ivarref/GetSockOpt.java
 
 clojure -X:tcp-retry
 
